[gd_scene load_steps=7 format=3 uid="uid://qlbjd1hi37g0"]

[ext_resource type="Theme" uid="uid://cxqueq3e8hid2" path="res://themes/ravenmail.tres" id="1_idnji"]
[ext_resource type="Script" path="res://Scenes/Web_Window/Webs/Ravenmail/ravenmail_web.gd" id="1_nyxuh"]
[ext_resource type="PackedScene" uid="uid://baoochsn4ef2b" path="res://Scenes/Web_Window/Webs/Ravenmail/ravenmail_email_button.tscn" id="2_hwebp"]
[ext_resource type="Script" path="res://Scenes/Web_Window/Webs/Ravenmail/Ravenmail_Controller.gd" id="2_p8nkq"]
[ext_resource type="Texture2D" uid="uid://cus4tcedlsvyk" path="res://Sprites/UI/MAIL/REF_MAIL_ACTIVADO.png" id="3_xaqmr"]
[ext_resource type="Texture2D" uid="uid://ctehee3fi7sdn" path="res://Sprites/UI/MAIL/SP_MAIL_LOGO.png" id="6_to6v4"]

[node name="Ravenmail_Web" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 1060.0
offset_bottom = 780.0
theme = ExtResource("1_idnji")
script = ExtResource("1_nyxuh")

[node name="refe" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.498039)
top_level = true
layout_mode = 0
offset_left = -158.0
offset_top = -184.0
offset_right = 1762.0
offset_bottom = 896.0
texture = ExtResource("3_xaqmr")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 132.0
offset_right = -687.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_p8nkq")

[node name="Control" type="Control" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="amigolorem" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Lorem ipsum...."
email = "Estimado Arkhar, 
Ha llegado a mis oídos la terrible noticia de que injustamente te han echado de la Universidad de Hechicería. ¡Por la barba de Merlín, qué infortunio! 
Pero calma, no has de entrar en angustia y desesperación, porque te traigo buenos augurios. En las Tierras Lejanas de Valhan-Gün descubrieron una nueva magia, la llaman Bubble Coin, ¡Una fuerza extraña e intangible que te permite ganar más, más y más!
Tus problemas estarán resueltos con esta magia, hazme caso, no dudes en aprenderla.
Sinceramente, tu amigo, Berker"
day = -1

[node name="amigo0" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Estimado Arkhar"
article = 1
email = "Estimado Arkhar, 
Ha llegado a mis oídos la terrible noticia de que injustamente te han echado de la Universidad de Hechicería. ¡Por la barba de Merlín, qué infortunio! 
Pero calma, no has de entrar en angustia y desesperación, porque te traigo buenos augurios. En las Tierras Lejanas de Valhan-Gün descubrieron una nueva magia, la llaman Bubble Coin, ¡Una fuerza extraña e intangible que te permite ganar más, más y más!
Tus problemas estarán resueltos con esta magia, hazme caso, no dudes en aprenderla.
Sinceramente, tu amigo, Berker"

[node name="amigo1" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Mi amigo Arkhar"
email = "Mi amigo Arkhar, 
He recibido tu carta, y me llena de regocijo saber que te has sumergido en este maravilloso mundo mágico de las Bubble Coins. He oído rumores sobre una sorprendente Bubble Coin que es la más poderosa de todas, esta burbuja fue conjurada por las mismísimas manos del fundador original de las Bubble Coins”. Me entusiasmo de tan solo pensar en el poder que debe contener. Espero noticias de tus avances.
Sinceramente, tu mejor amigo, Berker"
day = 1

[node name="amigo2" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Estimadísimo amigo mío"
email = "Estimadísimo amigo mío,
Me han llegado rumores de que te has convertido en un Archimago Experto de las Bubble Coins, me invade el orgullo y la emoción. 
No quisiera importunar ni hacer abuso de nuestra confianza cultivada con los años, pero me tomo el atrevimiento debido a nuestra inquebrantable amistad. 
¿Podrías prestarme algunas bubble coins? 
Sólo unas pocas, prometo devolvértelo en uno o dos días. 
Sinceramente, tu excelentísimo amigo, Berker"
day = 2

[node name="amigo3" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Arkhar."
email = "Arkhar,
Después de esperar ansioso tu respuesta por tanto tiempo, caigo en la cuenta de que para ti, los años que llevamos siendo amigos no valen ni una miseria. Quiero que te enteres que ese dinero era para ayudar a mi madre enferma, la misma que tan alegremente te recibía con una taza de chocolate caliente todas las tardes después del colegio durante nuestra niñez. 
Espero que ahora estés contento, regocijándote entre tus burbujas, y que estas sean tu compañía cuando la noche sea más oscura, porque hoy te has quedado sin un amigo.
Berker"
day = 3

[node name="amigo4" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Querida Rata Inmunda"
email = "Me he enterado que lo has perdido TODO en las Bubbles Coins y me alegra haber sido partícipe de tu ruina. 
Quiero que sepas que mi madre, la querida Pachita, pasó a mejor vida ayer por la noche, todo porque no quisiste prestarme el dinero antes de perderlo como el maldito avaro que eres. 
Espero algún día nos volvamos a encontrar, seguramente será en el infierno.
Sinceramente, tu acérrimo enemigo, Berker"
day = 4

[node name="Spam0" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "SPAM"
email = "“Tienda El Warlock Coqueto”: Ya está disponible el nuevo sombrero que todos aman, consíguelo sólo en las tiendas oficiales”"

[node name="Spam1" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "SPAM"
email = "Mira cómo se ven hoy en día el reparto de la serie “Volver al FuBrujo”, ¡uno se encuentra irreconocible!"
day = 1

[node name="Spam2" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "Secretos de la Financieromancia"
email = "Aprende los secretos de la Financieromancia. 50% DE DESCUENTO EN EL CURSO. PROMOCIÓN LIMITADA."
day = 1

[node name="Spam3" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "SPAM"
email = "¿Estás cansado de lootear todos los días en el mismo dungeon? INVIERTE YA EN BUBBLE COINS"
day = 2

[node name="Spam4" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "SPAM"
email = "¿Sufrís de disfunción mágica? No te preocupes, nosotros te ayudamos."
day = 2

[node name="Spam5" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "SPAM"
email = "¿Sos un mago mediocre? Comprá mi curso y te enseño cómo tener mentalidad de leviatán. Convertite en un experto de las Bubble Coins."
day = 3

[node name="Spam6" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "$$$URGENTE$$$"
email = "$$$URGENTE$$$: Aparece una nueva moneda en el mercado, las Dragon Coins. No te quedes afuera."
day = 3

[node name="Spam7" parent="VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
self_modulate = Color(1, 1, 1, 1)
layout_mode = 2
toggle_mode = true
email_subject = "SPAM"
email = "Las Dragon Coins no paran de crecer $$$ NO TE QUEDES AFUERA!!$!!"
day = 4

[node name="Email" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 491.0
offset_top = 121.0
offset_right = 1042.0
offset_bottom = 667.0
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
bbcode_enabled = true
text = "asunto: Querido Arkhar

de: berker88@raven.com
para: g.arkhar@raven.com


Estimado Arkhar, 
Ha llegado a mis oídos la terrible noticia de que injustamente te han echado de la Universidad de Hechicería. ¡Por la barba de Merlín, qué infortunio! 
Pero calma, no has de entrar en angustia y desesperación, porque te traigo buenos augurios. En las Tierras Lejanas de Valhan-Gün descubrieron una nueva magia, la llaman Bubble Coin, ¡Una fuerza extraña e intangible que te permite ganar más, más y más!
Tus problemas estarán resueltos con esta magia, hazme caso, no dudes en aprenderla.
Sinceramente, tu amigo, Berker"

[node name="EmailLink" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 489.0
offset_top = 687.0
offset_right = 1039.0
offset_bottom = 744.0
size_flags_vertical = 3
text = "¡Click aquí!"

[node name="IdleLogo" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 612.0
offset_top = 233.0
offset_right = 902.0
offset_bottom = 483.0
texture = ExtResource("6_to6v4")
expand_mode = 1
stretch_mode = 5

[node name="IdleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 537.0
offset_top = 716.0
offset_right = 976.0
offset_bottom = 739.0
theme_type_variation = &"IdleLabel"
text = "TUS PAPIROS SECRETOS, EN LAS MEJORES GARRAS"

[connection signal="OpenTab" from="VBoxContainer" to="." method="SetEmail"]
